md + archive toggles for gui
